# piston

./: .gitignore  .gitlab-ci.yml  LICENSE  README.md  docker-compose.yaml  dockerfile  main.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml
app/: __init__.py  config.py  models.py  routes.py  scheduler.py  utils.py
app/static/: script.js  styles.css
app/templates/: index.html
piston/: __init__.py  models.py  routes.py  scheduler.py
piston/static/: script.js  styles.css
piston/templates/: index.html
plugins/: ocde.py
plugins_default/: wikipedia.py
tests/: test_integration.py  test_unit.py
