[project]
name = "piston"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apscheduler>=3.10.4",
    "blinker>=1.9.0",
    "bs4>=0.0.2",
    "click>=8.1.7",
    "flask>=3.1.0",
    "flask-apscheduler>=1.13.1",
    "flask-sqlalchemy>=3.1.1",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.4",
    "jupyter>=1.1.1",
    "markupsafe>=3.0.2",
    "pytest>=8.3.3",
    "pytest-env>=1.1.5",
    "pytest-flask>=1.3.0",
    "python-dotenv>=1.0.1",
    "pytz>=2024.2",
    "requests>=2.32.3",
    "schedule>=1.2.2",
    "six>=1.16.0",
    "tzlocal>=5.2",
    "werkzeug>=3.1.3",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ruff>=0.7.4",
]
